force-app/main/default/objects/About_Me__c/About_Me__c.object-meta.xml
<CustomObject>
    <description
  >About Me records for the Salesforce Portfolio app.</description>
    <label>About Me</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>About Me</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>