force-app/main/default/objects/About_Me__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All About Me</label>
</ListView>